Updating the thank you page to use the right ak_text strings

--- a/thanks.html
+++ b/thanks.html
@@ -18,7 +18,7 @@
 				<div class="margin-bottom-medium c6 ct10 cm10">
 					<div class="share-facebook">
 						<div class="box bg-facebook-color margin-bottom-none">
-							<h4 class="icon-after icon-faded" data-icon="&#xe93F;">{% filter ak_text:"general_facebook" %}Share on Facebook{% endfilter %}</h4>
+							<h4 class="icon-after icon-faded" data-icon="&#xe93F;">{% filter ak_text:"general_share_on_fb" %}Share on Facebook{% endfilter %}</h4>
 						</div>
 						<div class="box box-big bg-white border">
 							<div class="fb-preview fb-preview-horizontal bg-white border p">
@@ -37,7 +37,7 @@
 					</div>
 					<div class="twitter-share">
 						<div class="bg-twitter-color box margin-bottom-none">
-						<h4 class="icon-after icon-faded" data-icon="&#xE941;">{% filter ak_text:"general_twitter" %}Share on Twitter{% endfilter %}</h4>
+						<h4 class="icon-after icon-faded" data-icon="&#xE941;">{% filter ak_text:"general_tweet" %}Share on Twitter{% endfilter %}</h4>
 						</div>
 						<div class="box box-big bg-white border">
 							<textarea class="bg-ltgray border strong p" readonly>{{ page.followup.twitter_message }}</textarea>
