--- a/donate.html
+++ b/donate.html
@@ -564,11 +564,11 @@
 					{% else %}
 						{% filter ak_text:"donate_footer_text_block" %}					
 						<p><strong class="text-small-caps">Donate by Check:</strong> Make your check payable to <em>350.org</em> and mail it to <em>350.org, 20 Jay St, Suite 732, Brooklyn, NY 11201, USA</em>.</p>
-						<p><strong class="text-small-caps">Other Options:</strong> You can also donate with <a href="https://www.coinbase.com/350org" target="_blank">BitCoin</a>, transfer stock, or include 350.org in your planned giving. <!-- or do <a href="http://350.causevox.com/">peer-to-peer fundraising</a>. --></p>
+						<p><strong class="text-small-caps">Other Ways To Give:</strong> <a href="https://350.org/other-ways-to-give/">Click here to see additional options, including transferring stock.</a>a</p>
 				<p><strong class="text-small-caps">Contact Us:</strong> Questions? Problems? Please contact us at <a href="mailto:donations@350.org?subject=Question%20about%20donation%20to%20350.org">donations@350.org</a>.</p>
 				<p><strong class="text-small-caps">Update Your Account: </strong>To update your account with a new credit card, new expiration date, or new amount please visit <a href="http://350.org/update">350.org/update</a></p>
 				<div style="width:40px;float:left;margin:0 1em 1em 0;"><img src="https://dbqvwi2zcv14h.cloudfront.net/images/350-ak-1pftp-donate-footer.png" alt="1% For The Planet" /></div>
-				<p>350.org is a registered 501c3 non-profit organization and all contributions are tax-deductible in the United States. 350.org's EIN/Tax ID is 26-1150699.</p>	
+				<p>350.org is a registered 501c3 non-profit organization and all contributions are tax-deductible in the United States. 350.org's EIN/Tax ID is 26-1150699. <a href="https://350.org/additional-financial-and-regulatory-information/">Additional financial information for US donors</a>.</p>	
 						{% endfilter %}
 					{% endif %}
 			</div>
