--- a/donate.html
+++ b/donate.html
@@ -564,7 +564,7 @@
 					{% else %}
 						{% filter ak_text:"donate_footer_text_block" %}					
 						<p><strong class="text-small-caps">Donate by Check:</strong> Make your check payable to <em>350.org</em> and mail it to <em>350.org, 20 Jay St, Suite 732, Brooklyn, NY 11201, USA</em>.</p>
-						<p><strong class="text-small-caps">Other Ways To Give:</strong> <a href="https://350.org/other-ways-to-give/">Click here to see additional options, including transferring stock.</a>a</p>
+						<p><strong class="text-small-caps">Other Ways To Give:</strong> <a href="https://350.org/other-ways-to-give/">Click here to see additional options, including transferring stock.</a></p>
 				<p><strong class="text-small-caps">Contact Us:</strong> Questions? Problems? Please contact us at <a href="mailto:donations@350.org?subject=Question%20about%20donation%20to%20350.org">donations@350.org</a>.</p>
 				<p><strong class="text-small-caps">Update Your Account: </strong>To update your account with a new credit card, new expiration date, or new amount please visit <a href="http://350.org/update">350.org/update</a></p>
 				<div style="width:40px;float:left;margin:0 1em 1em 0;"><img src="https://dbqvwi2zcv14h.cloudfront.net/images/350-ak-1pftp-donate-footer.png" alt="1% For The Planet" /></div>
