adding charity nav logo

--- a/donate.html
+++ b/donate.html
@@ -567,8 +567,9 @@
 <p><strong class="text-small-caps">Other Ways To Give:</strong> <a href="https://350.org/other-ways-to-give/">Click here</a> to see additional options, including transferring stock.</p>
 <p><strong class="text-small-caps">Contact Us:</strong> Questions? Problems? Please contact us at <a href="mailto:donations@350.org?subject=Question%20about%20donation%20to%20350.org">donations@350.org</a>.</p>
 <p><strong class="text-small-caps">Update Your Account:</strong> To update your account with a new credit card, new expiration date, or new amount please visit <a href="http://350.org/update">350.org/update</a></p>
-<div style="width:40px;float:left;margin:0 1em 1em 0;"><img alt="1% For The Planet" src="https://dbqvwi2zcv14h.cloudfront.net/images/350-ak-1pftp-donate-footer.png">
-</div>
+
+<div style="float:left;margin:0 1em 1em 0;"><img src="https://www.charitynavigator.org/_gfx_/promo/printable/jpegs/general_rectangle.jpg" style="float: left; height: 40px; margin-right: 10px;"> <img alt="1% For The Planet" src="https://dbqvwi2zcv14h.cloudfront.net/images/350-ak-1pftp-donate-footer.png" style="float: left; height: 40px; background: #fff; padding: 2px;"></div>
+
 <p>350.org is a registered 501c3 non-profit organization and all contributions are tax-deductible in the United States. 350.org's EIN/Tax ID is 26-1150699. <a href="https://350.org/additional-financial-and-regulatory-information/">Additional financial information for US donors</a>.</p>
 						{% endfilter %}
 					{% endif %}
