--- a/donate.html
+++ b/donate.html
@@ -1280,12 +1280,13 @@
 }
 
 @media screen and ( min-width:720px ){
-/*
 	#ak-fieldbox-card_code{
+		font-size: .7em;
+/*
   	margin:0px 0 0 3%;
 		width:39%;
+*/  		
   }
-*/  
 }
 
 
