--- a/donate.html
+++ b/donate.html
@@ -484,7 +484,7 @@
 					    <div id="ak-fieldbox-card_code" class="input-text input-cvv ak-input-type-user ak-err-below">
 					        <input type="hidden" name="required" value="card_code" id="ak-card_code-required">
 					        <label for="ak-card_code" title="The 3–4 digit security code on the back of your card.">{% filter ak_text:"field_card_code" %}CVV{% endfilter %}</label>
-					        <div id="ak-card_code-hosted" class="hosted-field"></div>
+					        <div id="ak-card_code-hosted" class="hosted-field" style="height: 80px;margin-bottom: 0;"></div>
 					        <input id="ak-card_code" type="text" name="card_code" size="4">
 					    </div>
 					    <div class="clear"></div>
