--- a/donate.html
+++ b/donate.html
@@ -1281,6 +1281,7 @@
 
 @media screen and ( min-width:720px ){
 	#ak-fieldbox-card_code{
+		font-size: .7em;
 /*
   	margin:0px 0 0 3%;
 		width:39%;
