--- a/unsubscribe.html
+++ b/unsubscribe.html
@@ -1,17 +1,19 @@
-{% extends "./wrapper.html" %}{% load actionkit_tags %}
+{% extends "./wrapper.html" %}
+{% load actionkit_tags %}
 {% load smartif %}
 
 {% block content %}
 
-<div id="page-header">
-<h2 id="page-title" class="">{{ page.title }}</h2>
-</div>
-
-<div id="content">
-{% autoescape off %}
-{% include_tmpl form.introduction_text %}
-{% endautoescape %}
-</div>
+<section id="action-lead" class="section action-lead width-narrow padding-large bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
+	<div class="section-inner">
+		<div id="action-header" class="">
+			<h1 id="action-title" class="title3">{{ page.title }}</h1>
+			<div class="" data-readmore-after="{% if page.custom_fields.page_description_readmore %}{{ page.custom_fields.page_description_readmore }}{% else %}2{% endif %}">{% include_tmpl form.introduction_text %}</div>
+		</div>
+	</div>
+</section>
+			
+			
 
 <form class="ak-form action_form" name="act" method="POST" action="/act/" accept-charset="utf-8">
 <div id="form">
