--- a/unsubscribe.html
+++ b/unsubscribe.html
@@ -3,7 +3,28 @@
 {% load smartif %}
 
 {% block content %}
-
+<section id="action-lead" class="section action-lead title-section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
+	<div class="section-inner">
+		<div id="action-header" class="{% if page.custom_fields.page_layout_style == 'expanded' %}c10{% else %}c6{% endif %} ct10 cm10 c-wide">
+			<a id="jump-to-form" href="#action-form" class="tablet-hide desktop-hide mobile-hide bg-orange text-underline-none text-center arrow-down text-large2">{% if page.custom_fields.form_submit_button_text %}{{ page.custom_fields.form_submit_button_text }}{% else %}{% filter ak_text:"signup_submit_button" %}Sign Up{% endfilter %}{% endif %}</a> 
+			{% if page.custom_fields.page_pretitle %}
+			<p id="action-pretitle" class="text-font-secondary"><span class="highlight bg-dkgray-trans">{{ page.custom_fields.page_pretitle }}</span></p>
+			{% endif %}
+			<h2 id="action-title" class="title3">
+			{% if page.custom_fields.page_title_custom_html %}
+				{% autoescape off %} {{ page.custom_fields.page_title_custom_html }} {% endautoescape %}
+			{% else %}
+				<span class="{{ page.custom_fields.page_title_style }}">{{ page.title }}</span>
+			{% endif %}
+			</h2>
+			{% if page.custom_fields.page_author %}
+			<div class="action-author" class="p">
+				{% if page.custom_fields.page_author_image %}<span class="action-author-image"><img src="{{ page.custom_fields.page_author_image }}"></span> {% else %}&mdash; {% endif %}<span class="action-author-text meta">{% autoescape off %}{{ page.custom_fields.page_author }}{% endautoescape %}</span>
+			</div>
+			{% endif %}
+		{% if page.custom_fields.page_layout_style == "expanded" %}
+		</div>
+		{% endif %}			
 <div id="action-description" class="text-large margin-top-none margin-bottom-huge {% if page.custom_fields.page_layout_style == 'expanded' %}c6 ct10 cm10 c-wide{% endif %}" {% if page.custom_fields.page_layout_style == "expanded" %}{% else %}data-readmore-after="{% if page.custom_fields.page_description_readmore %}{{ page.custom_fields.page_description_readmore }}{% else %}2{% endif %}"{% endif %}>
 		{% autoescape off %}
 			{% include_tmpl form.introduction_text %}
