--- a/unsubscribe.html
+++ b/unsubscribe.html
@@ -25,7 +25,7 @@
 		{% if page.custom_fields.page_layout_style == "expanded" %}
 		</div>
 		{% endif %}			
-<div id="action-description" class="text-large margin-top-none margin-bottom-huge {% if page.custom_fields.page_layout_style == 'expanded' %}c6 ct10 cm10 c-wide{% endif %}" {% if page.custom_fields.page_layout_style == "expanded" %}{% else %}data-readmore-after="2"{% endif %}>
+<div id="action-description" class="text-large margin-top-none margin-bottom-huge" data-readmore-after="10">
 		{% autoescape off %}
 			{% include_tmpl form.introduction_text %}
 		{% endautoescape %}
