out !importanting the !important

--- a/unsubscribe.html
+++ b/unsubscribe.html
@@ -3,6 +3,7 @@
 			padding: 0.5em 1em 0.5em 2.1em !important;
 			font-size: 1rem !important;
 			border: 1px solid rgba(21,46,43,0.05) !important;
+			border-bottom: 1px solid rgba(21,46,43,0.05) !important;
 		}
 		.bg-instagram-color, a.bg-instagram-color {
     		background-color: rgb(185, 0, 180);
