--- a/unsubscribe.html
+++ b/unsubscribe.html
@@ -1,5 +1,5 @@
 	<style>
-		.button-icon{
+		.button-icon.button{
 			padding: 0.5em 1em 0.5em 2.1em !important;
 			font-size: 1rem !important;
 			border: 1px solid rgba(21,46,43,0.05) !important;
